--- a/articles/er-evaluation-models/er-related-work.bib
+++ b/articles/er-evaluation-models/er-related-work.bib
@@ -89,3 +89,10 @@ publisher={The Australian National University}
   year={2020},
   publisher={ACM New York, NY, USA}
 }
+
+@article{deepm2020,
+  title={Deep entity matching with pre-trained language models},
+  author={Li, Yuliang and Li, Jinfeng and Suhara, Yoshihiko and Doan, AnHai and Tan, Wang-Chiew},
+  journal={arXiv preprint arXiv:2004.00584},
+  year={2020}
+}
